# codeql

./: .bazelrc  MODULE.bazel
cpp/autobuilder/Semmle.Autobuild.Cpp/: BUILD.bazel
csharp/: BUILD.bazel
csharp/autobuilder/Semmle.Autobuild.CSharp/: BUILD.bazel
csharp/autobuilder/Semmle.Autobuild.Shared/: BUILD.bazel
csharp/extractor/: paket.csharp_extractor.bzl  paket.csharp_extractor_extension.bzl  paket.dependencies  update-deps.sh
csharp/extractor/Semmle.Extraction/: BUILD.bazel
csharp/extractor/Semmle.Extraction.CSharp/: BUILD.bazel
csharp/extractor/Semmle.Extraction.CSharp.DependencyFetching/: BUILD.bazel
csharp/extractor/Semmle.Extraction.CSharp.DependencyStubGenerator/: BUILD.bazel
csharp/extractor/Semmle.Extraction.CSharp.Driver/: BUILD.bazel
csharp/extractor/Semmle.Extraction.CSharp.Standalone/: BUILD.bazel
csharp/extractor/Semmle.Extraction.CSharp.StubGenerator/: BUILD.bazel
csharp/extractor/Semmle.Extraction.CSharp.Util/: BUILD.bazel
csharp/extractor/Semmle.Util/: BUILD.bazel
csharp/extractor/Semmle.Util.Tests/: BUILD.bazel
go/extractor/: extractor.go
go/ql/examples/snippets/: taint.ql  taint_policy.qll  taint_query.ql  util.qll
go/ql/lib/semmle/go/: Scopes.qll
go/ql/lib/semmle/go/dataflow/internal/: DataFlowNodes.qll
misc/bazel/: csharp.bzl
