load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "publish_binary",
)

csharp_binary(
    name = "Semmle.Autobuild.CSharp",
    srcs = glob([
        "*.cs",
    ]),
    nullable = "enable",
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//csharp/autobuilder/Semmle.Autobuild.Shared",
        "//csharp/extractor/Semmle.Extraction.CSharp",
        "//csharp/extractor/Semmle.Extraction.CSharp.DependencyFetching",
        "//csharp/extractor/Semmle.Util",
        "@paket.csharp_extractor//microsoft.build",
        "@paket.csharp_extractor//newtonsoft.json",
    ],
)

publish_binary(
    name = "binary",
    binary = ":Semmle.Autobuild.CSharp",
    runtime_identifier = "osx-x64",
    self_contained = True,
    target_framework = "net8.0",
)
