load(
    "//misc/bazel:csharp.bzl",
    "codeql_csharp_binary",
)

codeql_csharp_binary(
    name = "Semmle.Autobuild.CSharp",
    srcs = glob([
        "*.cs",
    ]),
    nullable = "enable",
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//csharp/autobuilder/Semmle.Autobuild.Shared",
        "//csharp/extractor/Semmle.Extraction.CSharp",
        "//csharp/extractor/Semmle.Extraction.CSharp.DependencyFetching",
        "//csharp/extractor/Semmle.Util",
        "@paket.csharp_extractor//microsoft.build",
        "@paket.csharp_extractor//newtonsoft.json",
    ],
)
