load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "Semmle.Extraction.CSharp.DependencyFetching",
    srcs = glob([
        "*.cs",
    ]),
    allow_unsafe_blocks = True,
    nowarn = ["CA1822"],
    nullable = "enable",
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//csharp/extractor/Semmle.Extraction",
        "//csharp/extractor/Semmle.Util",
    ],
)
