load(
    "//misc/bazel:csharp.bzl",
    "codeql_csharp_library",
)

codeql_csharp_library(
    name = "Semmle.Extraction.CSharp.DependencyFetching",
    srcs = glob([
        "*.cs",
    ]),
    allow_unsafe_blocks = True,
    nowarn = ["CA1822"],
    visibility = ["//csharp:__subpackages__"],
    deps = [
        "//csharp/extractor/Semmle.Extraction",
        "//csharp/extractor/Semmle.Util",
    ],
)
