load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "publish_binary",
)

csharp_binary(
    name = "Semmle.Extraction.CSharp.DependencyStubGenerator",
    srcs = glob([
        "*.cs",
    ]),
    nullable = "enable",
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//csharp/extractor/Semmle.Extraction.CSharp.DependencyFetching",
        "//csharp/extractor/Semmle.Extraction.CSharp.StubGenerator",
        "//csharp/extractor/Semmle.Util",
    ],
)

publish_binary(
    name = "binary",
    binary = ":Semmle.Extraction.CSharp.DependencyStubGenerator",
    runtime_identifier = "osx-x64",
    self_contained = True,
    target_framework = "net8.0",
)
