load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "Semmle.Extraction.CSharp.StubGenerator",
    srcs = glob([
        "*.cs",
    ]),
    nullable = "enable",
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//csharp/extractor/Semmle.Extraction.CSharp.DependencyFetching",
        "//csharp/extractor/Semmle.Extraction.CSharp.Util",
        "//csharp/extractor/Semmle.Util",
        "@paket.csharp_extractor//microsoft.codeanalysis.csharp",
    ],
)
