load(
    "//misc/bazel:csharp.bzl",
    "codeql_csharp_library",
)

codeql_csharp_library(
    name = "Semmle.Extraction.CSharp.StubGenerator",
    srcs = glob([
        "*.cs",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//csharp/extractor/Semmle.Extraction.CSharp.DependencyFetching",
        "//csharp/extractor/Semmle.Extraction.CSharp.Util",
        "//csharp/extractor/Semmle.Util",
        "@paket.csharp_extractor//microsoft.codeanalysis.csharp",
    ],
)
