load(
    "//misc/bazel:csharp.bzl",
    "codeql_csharp_library",
)

codeql_csharp_library(
    name = "Semmle.Extraction.CSharp.Util",
    srcs = glob([
        "*.cs",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//csharp/extractor/Semmle.Util",
        "@paket.csharp_extractor//microsoft.codeanalysis.csharp",
    ],
)
