load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "Semmle.Extraction",
    srcs = glob([
        "**/*.cs",
    ]),  # TODO debug constants
    nullable = "enable",
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [
        "//csharp/extractor/Semmle.Util",
        "@paket.csharp_extractor//gitinfo",
        "@paket.csharp_extractor//microsoft.build",
        "@paket.csharp_extractor//microsoft.codeanalysis",
    ],
)
