load(
    "//misc/bazel:csharp.bzl",
    "codeql_csharp_library",
)

codeql_csharp_library(
    name = "Semmle.Extraction",
    srcs = glob([
        "Entities/**/*.cs",
        "Extractor/**/*.cs",
        "*.cs",
    ]),  # TODO debug constants
    visibility = ["//csharp:__subpackages__"],
    deps = [
        "//csharp/extractor/Semmle.Util",
        # "@paket.csharp_extractor//gitinfo",
        # "@paket.csharp_extractor//thisassembly.git",
        "@paket.csharp_extractor//microsoft.build",
        "@paket.csharp_extractor//microsoft.codeanalysis",
    ],
)
