load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

csharp_library(
    name = "Semmle.Util",
    srcs = glob([
        "Logging/**/*.cs",
        "ToolStatusPage/**/*.cs",
        "*.cs",
    ]),
    nullable = "enable",
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [
        "@paket.csharp_extractor//mono.posix.netstandard",
        "@paket.csharp_extractor//newtonsoft.json",
    ],
)
