load(
    "//misc/bazel:csharp.bzl",
    "codeql_csharp_library",
)

codeql_csharp_library(
    name = "Semmle.Util",
    srcs = glob([
        "Logging/**/*.cs",
        "ToolStatusPage/**/*.cs",
        "*.cs",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "@paket.csharp_extractor//mono.posix.netstandard",
        "@paket.csharp_extractor//newtonsoft.json",
    ],
)
